# libshell

./: .gitignore  CMakeLists.txt  README.md  make_project.py  xmake.lua
example/: StaticSolve.h  main.cpp  xmake.lua
include/: StVKMaterial.h
src/: xmake.lua
tests/: xmake.lua
